# cpprestsdk

./: CMakeLists.txt
Release/: CMakeLists.txt
Release/samples/: CMakeLists.txt
Release/samples/t5/: CMakeLists.txt
Release/src/utilities/: asyncrt_utils.cpp
Release/tests/functional/json/: parsing_tests.cpp
test/: CMakeLists.txt  main.cpp
